--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:100");
+@import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
 html, body, h1 {
   padding: 0;
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Share Tech Mono', monospace;
 }
 
 #app {
